# Pdf2Md

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENT_HANDOVER.md  CHANGE_REQUEST_MCP_HTTP.md  COPILOT_CHANGE_REQUEST.md  DOCKER_COMPOSE_IMPLEMENTATION_PLAN.md  DOCKER_IMPLEMENTATION_STATUS.md  Dockerfile  ENHANCED_AUDIO_README.md  GPU_AUDIO_INTEGRATION_FINAL_REPORT.md  GPU_INTEGRATION_COMPLETE.md  GPU_SETUP.md  GPU_TESTING_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  Pdf2Md.code-workspace  README.md  REAL_AUDIO_TESTING_RESULTS.md  TODO.md  check_dependencies.py  converted.md  create_test_requests.js  debug_ocr.py  demo_enhanced_audio.js  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements-gpu.txt  simple_whisper_test.py  test-docker-setup.sh  test-docker.sh  test-enhanced-client.js  test-http-client.js  (+30 more)
.github/: AUDIO_ENHANCEMENT_STATUS.md  COPILOT_INTEGRATION_REQUEST.md  COPILOT_SETUP_COMPLETE.md  GPU_INTEGRATION_READY.md  LFS_FORK_ISSUE_RESOLUTION.md  LFS_ISSUE_RESOLUTION.md  MCP_TOOLS_REFERENCE.md  SETUP_INSTRUCTIONS.md  copilot-context.md  copilot-environment.md  copilot-instructions.md  copilot-testing.md  copilot-workspace.md  environment-setup.md  mcp-context.md
.roo/: mcp.json
docs/: DOCKER_DEPLOYMENT.md  ROO_CODE_INTEGRATION.md  VSCODE_COPILOT_INTEGRATION.md  audio_transcription_improvement_proposal.md
issues/: ISSUES_REPORT.md  image-tool-issue.md  pptx-tool-issue.md  testing-summary.md  xlsx-tool-issue.md  youtube-tool-issue.md
nginx/: nginx.conf
src/: Markdownify.ts  gpu_transcribe.py  health.ts  http-server.ts  index.ts  progress-stream.ts  redis-store.ts  security.ts  server.ts  simple_audio_transcription.py  stdio-server.ts  (+2 more)
(+61 files in other folders)
