[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markitdown>=0.0.1a3",
    "openai-whisper",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.36.0",
    "faster-whisper>=1.0.0",
    "datasets",
    "accelerate",
    "pynvml",
    "GPUtil",
]

[project.optional-dependencies]
gpu = [
    "torch==2.4.0+cu121",
    "torchaudio==2.4.0+cu121",
    "faster-whisper[gpu]>=1.0.0",
]
