[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markitdown>=0.0.1a3",
    "faster-whisper>=1.0.0",
    "torch>=2.4.0",
    "torchaudio>=2.1.0",
    "transformers>=4.36.0",
    "datasets",
    "accelerate",
    "pynvml",
    "GPUtil>=1.4.0",
]

[project.optional-dependencies]
gpu = [
    "torch[cuda]>=2.4.0",
    "faster-whisper[gpu]>=1.0.0",
    "nvidia-ml-py>=12.535.108",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
