[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markitdown>=0.0.1a3",
    "openai-whisper",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.36.0",
    "faster-whisper>=0.10.0",
    "datasets",
    "accelerate",
    "pytesseract>=0.3.13",
    "opencv-python>=4.12.0.88",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "faster-whisper>=1.0.0",
    "nvidia-ml-py>=12.0.0",
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
]
